--- a/html/index.html
+++ b/html/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>css</title>
 </head>
 <body>
-    
+    <h1 class="title">my website</h1>
+    <h2 class="subtitle">about me</h2>
+
+    <h2 id="contact-us">contact us</h2>
 </body>
 </html>
