--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1 class="title">my website</h1>
     <h2 class="subtitle">about me</h2>
+    <h2 class="subtitle" id="subtitle" style="color: steelblue;">services</h2>
 
     <h2 id="contact-us">contact us</h2>
 </body>
