--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,14 @@
     </ul>
     <ul>
         <li>only child</li>
+<!--         <li>
+            <ol>
+                <li>my numered list item</li>
+            </ol>
+        </li> -->
+        <ol>
+            <li>my numered list item</li>
+        </ol>
     </ul>
     <h2 class="subtitle" id="subtitle" style="color: steelblue;">services</h2>
     <a href="https://www.google.com" id="googlelink">google</a>
@@ -53,8 +61,12 @@
 
     <h2 id="contact*us">contact us</h2>
     <form action="">
-        
+        <input type="text" placeholder="full name"><br>
+        <input type="email" placeholder="exmaple@exe.com"><br>
+        <textarea name="message" id="message" cols="30" rows="10"></textarea><br>
+        <button>submit</button>
     </form>
+    <button>submit</button>
 
 </body>
 </html>
