advance selectors compleated

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur sunt non perspiciatis, rerum dolorem id aliquam praesentium nobis excepturi officia quibusdam adipisci esse, odit mollitia maxime debitis deserunt reiciendis illum.</p>
 
-    <h2 class="subtitle">about me</h2>
+    <h2 class="subtitle sub2">about me</h2>
 
     <img src="/img/img-1.jpg" alt="">
 
