--- a/html/index.html
+++ b/html/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style1.css">
     <title>css</title>
 </head>
 <body>
-    <h1 class="title">my website</h1>
+    <h1 id="title">my website</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur sunt non perspiciatis, rerum dolorem id aliquam praesentium nobis excepturi officia quibusdam adipisci esse, odit mollitia maxime debitis deserunt reiciendis illum.</p>
+    <p class="para-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur sunt non perspiciatis, rerum dolorem id aliquam praesentium nobis excepturi officia quibusdam adipisci esse, odit mollitia maxime debitis deserunt reiciendis illum.</p>
 
     <h2 class="subtitle sub2">about me</h2>
 
     <img src="/img/img-1.jpg" alt="">
 
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati cum error ullam veniam dolorum vitae, repudiandae culpa facere voluptates veritatis perferendis nam repellendus excepturi. Aliquid quia itaque vitae sequi asperiores.</p>
+    <p class="para-txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati cum error ullam veniam dolorum vitae, repudiandae culpa facere voluptates veritatis perferendis nam repellendus excepturi. Aliquid quia itaque vitae sequi asperiores.</p>
     
     <ul>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
+        <li class="list">item</li>
+        <li class="list">item </li>
+        <li class="list">item</li>
     </ul>
     <ul>
         <li>only child</li>
@@ -34,7 +34,7 @@
             <li>my numered list item</li>
         </ol>
     </ul>
-    <h2 class="subtitle" id="subtitle" style="color: steelblue;">services</h2>
+    <h2 class="subtitle" id="subtitle";>services</h2>
     <a href="https://www.google.com" id="googlelink">google</a>
 
     <table border="1">
@@ -59,10 +59,10 @@
     
     <img src="/img/img-2.jpg" alt="">
 
-    <h2 id="contact*us">contact us</h2>
+    <h2 id="contact-us">contact us</h2>
     <form action="">
-        <input type="text" placeholder="full name"><br>
-        <input type="email" placeholder="exmaple@exe.com"><br>
+        <input type="text" placeholder="full name" class="form-input"><br>
+        <input type="email" placeholder="exmaple@exe.com" class="form-input"><br>
         <textarea name="message" id="message" cols="30" rows="10"></textarea><br>
         <button>submit</button>
     </form>
