--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <title>css</title>
 </head>
 <body>
-    <h1 id="title">my website</h1>
+    <h1 id="title">My website</h1>
 
     <p class="para-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur sunt non perspiciatis, rerum dolorem id aliquam praesentium nobis excepturi officia quibusdam adipisci esse, odit mollitia maxime debitis deserunt reiciendis illum.</p>
 
@@ -57,7 +57,7 @@
         </thead>
     </table>
     
-    <img src="/img/img-2.jpg" alt="">
+    <div id="service-images"></div>
 
     <h2 id="contact-us">contact us</h2>
     <form action="">
