--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
         </ol>
     </ul>
     <h2 class="subtitle" id="subtitle";>services</h2>
-    <a href="https://www.google.com" id="googlelink">google</a>
+    <a href="https://www.google.com" class="link">google</a>
 
     <table border="1">
         <thead>
