--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 id="title">My website</h1>
 
-    <p class="para-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur sunt non perspiciatis, rerum dolorem id aliquam praesentium nobis excepturi officia quibusdam adipisci esse, odit mollitia maxime debitis deserunt reiciendis illum.</p>
+    <p class="para-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur sunt non perspiciatis, rerum dolorem id <span class="ilalis">aliquam praesentium nobis excepturi officia quibusdam adipisci</span> esse, odit mollitia maxime debitis deserunt reiciendis illum.</p>
 
     <h2 class="subtitle sub2">about me</h2>
 
