--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
 
     <h2 class="subtitle sub2">about me</h2>
 
-    <img src="/img/img-1.jpg" alt="">
+    <img src="/img/img-1.jpg" alt="" id="about-us">
 
     <p class="para-txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati cum error ullam veniam dolorum vitae, repudiandae culpa facere voluptates veritatis perferendis nam repellendus excepturi. Aliquid quia itaque vitae sequi asperiores.</p>
     
