--- a/html/index.html
+++ b/html/index.html
@@ -69,6 +69,16 @@
         <div class="container-item" style="order: 4; flex: 1 1 100px; align-self: center;">e</div>
 
     </div>
+    <div class="grid-container">
+        <div class="grid-item" style="background: rgb(248, 115, 49);
+        grid-area: 2/1/ span 2/span 3;
+        ">1</div>
+        <div class="grid-item" style="background: rgb(159, 248, 49);">2</div>
+        <div class="grid-item" style="background: rgb(248, 49, 198);">3</div>
+        <div class="grid-item" style="background: rgb(248, 185, 49);">4</div>
+        <div class="grid-item" style="background: rgb(49, 135, 248);">5</div>
+        <div class="grid-item" style="background: rgb(177, 103, 11);">6</div>
+    </div>
 
     <h2 id="contact-us">contact us</h2>
     <form action="">
@@ -77,7 +87,8 @@
         <textarea name="message" id="message" cols="30" rows="10"></textarea><br>
         <button>submit</button>
     </form>
-    <button>submit</button>
+    <button class="submit-btn">submit</button>
+
 
 </body>
 </html>
