--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
 
     <p class="para-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur sunt non perspiciatis, rerum dolorem id <span class="ilalis">aliquam praesentium nobis excepturi officia quibusdam adipisci</span> esse, <p>block level element</p> debitis deserunt reiciendis illum.</p>
 
-    <h2 class="subtitle sub2">about me</h2>
+    <h2 class="subtitle" id="about-me">about me</h2>
 
     <img src="/img/img-1.jpg" alt="" id="about-us">
 
